CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Electrolize', sans-serif;
}


.hero{
    background-image: url("../assets/oie_17115424RtWQnZ7.jpg");
    background-size: cover;
    background-position: center;
    padding-top: 3%;
    padding-bottom: 3%;
    
}

.content{
    background: rgba(0, 0, 0, 0.5);
    margin: 0;
    overflow: hidden;
}

.line{
    display: inline-block;
    height: 30vh;
    width: 1px;
    background-color: yellow;
}
.fb{
    color: blue;
}

.ig{
    color: violet;
}

.gh{
    color: white;
}

.design{
    padding-top: 10vh;
}

.header a{
    text-decoration: none;
    color: white;
    font-size: 30px;
    display: inline-block;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 6px;
    
}

.header a:hover{
    background-color: wheat;
    color: aqua;
    transition: 1.5s;
}


.info{
    height: 40vh;
    color: yellow;
}

.slides{
    position: relative;
    display: none;
    width: 100%;
}

.text{
    position: absolute;
    bottom: -20px;
    right: 20px;
    font-size: x-large;
    font-family: 'Smokum', cursive;
    width: fit-content;
}

.text p{
    background: rgba(0, 0, 0, 0.5);
    color: white;
    padding: 5px;
}

.order{
    padding-top: 7vh;
    padding-bottom: 7vh;
}

.order header {
    padding: 40px;
    color: white;
}

.base-0{
    background: #0F0E0E;
}

.base-1{
    background: #191919;
}
.base-2{
    background: #041C32;
}

.right{
    float:right;
}

.yellow{
    color: yellow;
}

#datatype{
    display: none;
}

::-webkit-scrollbar{
    width: 5px;
}

::-webkit-scrollbar-track{
    background: #f1f1f1;
}

::-webkit-scrollbar-thumb{
    background: black;
    border-radius: 2px;
}

.tdimg{
    width: 10vh;
    border-radius: 50%;
    height: 10vh;
}

.myimg2{
    max-width: 100px;
    max-height: 100px;
}

